test/conformance/chainsaw/validating-policies/exceptions/full-exemption-beats-partial/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: app
      image: untrusted-image:latest
