test/conformance/chainsaw/validating-policies/exceptions/full-exemption-beats-partial/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: full-exemption-beats-partial
spec:
  concurrent: false
  steps:
    - name: create-exceptions
      try:
        - create:
            file: exception-full-exemption.yaml
        - create:
            file: exception-partial-images.yaml
        - sleep:
            duration: 10s

    - name: create-policy
      use:
        template: ../../../_step-templates/create-policy.yaml
        with:
          bindings:
            - name: file
              value: policy.yaml

    - name: wait-validating-policy-ready
      use:
        template: ../../../_step-templates/validating-policy-v1-ready.yaml
        with:
          bindings:
            - name: name
              value: restrict-images

    - name: pod-admitted-via-full-exemption
      try:
        - apply:
            file: pod.yaml
        - assert:
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-pod

    - name: check-report-shows-skip
      try:
        - sleep:
            duration: 30s
        - assert:
            file: skip-report-assert.yaml
